--- a/CadabraTest.API/wwwroot/analysis.html
+++ b/CadabraTest.API/wwwroot/analysis.html
@@ -128,7 +128,7 @@
 <script>
 const urlParams = new URLSearchParams(window.location.search);
 const analysisId = urlParams.get("analysisId");
-const API_URL = "http://localhost:5000/api";
+const API_URL = "https://cad-analyzer-production-b9f3.up.railway.app/api";
 
 if (!analysisId) alert("Missing analysisId");
 
