--- a/CadabraTest.API/wwwroot/analysis.html
+++ b/CadabraTest.API/wwwroot/analysis.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="https://framerusercontent.com/images/V2FhT1WEhGiG9ac3CkJECacQlj4.png?width=100&height=100s" />
     <title>Analysis Details</title>
 
     <style>
