--- a/CadabraTest.API/wwwroot/index.html
+++ b/CadabraTest.API/wwwroot/index.html
@@ -6,6 +6,7 @@
     <title>Part Analysis Dashboard</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="https://framerusercontent.com/images/V2FhT1WEhGiG9ac3CkJECacQlj4.png?width=100&height=100s" />
     <style>
         
     </style>
