--- a/CadabraTest.API/wwwroot/login.html
+++ b/CadabraTest.API/wwwroot/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="icon" type="image/x-icon" href="https://framerusercontent.com/images/V2FhT1WEhGiG9ac3CkJECacQlj4.png?width=100&height=100s" />
     <title>Login</title>
     <style>
         
